--- a/mystyle.css
+++ b/mystyle.css
@@ -21,8 +21,9 @@
 	       font-family: Verdana
 	    }	
 	
-	table   { 
-	       font-family: Verdana
+	table , th, td   { 
+	       font-family: Verdana;
+		   border: 1px solid black;
 	    }	
 	
     h1   { 
